--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,5 @@ jobs: # a collection of steps
     steps: # a collection of executable commands
       - checkout
       - run: ./mvnw clean install
-      - run: ./mvnw cobertura:cobertura
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+      - run: bash <(curl -s https://codecov.io/bash)
+
