--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,4 @@ jobs: # a collection of steps
       - checkout
       - run: ./mvnw clean install
       - run: ./mvnw cobertura:cobertura
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+      - run: bash <(curl -s https://codecov.io/bash)
